# hpg

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  LICENSE  LICENSE.spdx  README.md  downloadFindFFTW.cmake.in  hpg.cc  hpg.hpp  hpgVersionDetails.cmake  hpg_impl.hpp  test.cc
.gitlab/: changelog_config.yml
cmake/: CMakeLists.txt  FindFFTW.cmake  downloadFindFFTW.cmake.in
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
doc/: CMakeLists.txt
spack/: package.py
src/: CMakeLists.txt  argparse.hpp  hpg.cc  hpg.hpp  hpg_config.hpp.in  hpg_core.cc  hpg_core.hpp  hpg_error.cc  hpg_error.hpp  hpg_impl.cc  hpg_impl.hpp  hpg_indexing.hpp  hpg_layouts.hpp  hpg_mpi.cc  hpg_mpi.hpp  hpg_mpi_runtime.hpp  hpg_runtime.cc  hpg_runtime.hpp  hpg_rval.hpp  hpg_version.cpp.in  hpg_version.hpp  minigridder.cc
tests/: CFIndexerUnitTests.cc  CMakeLists.txt  DeviceCFArrayUnitTests.cc  GridArraysUnitTests.cc  GridderStateUnitTests.cc  GridderUnitTests.cc  MPIRuntimeUnitTests.cc  gridone.h5  test.cc  utGridderState.cc
